@@ -13,3 +13,14 @@
 	requires com.esh.module3;
 }
 ```
+ 
+## Jlink
+  - Create custom JRE.
+  ```
+  $JAVA_HOME/bin/jlink	\
+	--module-path $JAVA_HOME/jmods:out \
+	--add-modules academy.learnprogramming.jokeapp \
+	--launcher JOKER=academy.learnprogramming.jokeapp/academy.learnprogramming.jokeapp.Main 	\
+	--output jre
+
+  ```
